
2005-05-26 (0.994)
	Version set to 0.994
	Some minor documentation updates.
	
	Removed: --RID_as_given
	Added: --RID {file | path | none}
		Style for RID values in output.
			file : the simple filename without path 
			path : exactly as obtained from command line or field in vector 
			none : no RID is included in output
			
	Updated: --csv now processing --RID
	
2005-05-21 (0.994)
	PATH in starspan{.in} was not set to include GDAL and GEOS's bin/
	directories. Fixed.
	
	todo: check proper environment to run tests 
	
2005-04-28 (0.993)
	Hack in starspan_myErrorHandler (starspan_util.cc) as a workaround
	in current GDAL code which doesn't implement SetScale/SetOffset 
	methods for some raster band types.  
	
	Traverser code cleanup (traverser.h, traverser.cc):
	Removed old methods for rasterization of polygons:
		processValidPolygon_FF(geos_poly)
		processValidPolygon_BB(geos_poly)
	Versions containing those methods are:
	    traverser.h,v 1.9
		traverser.cc,v 1.10
		
	starspan_countbyclass.cc: verbose messages and flush for each
	finished feature.
	
	Note: configure doesn't set execution permission to script 
	starspan. This flag is set by `make install' on destination.
	For running the tests under tests/, I added a `chmod +x ../starspan'
	to tests/Makefile. I discarded adding a `chmod +x starspan' to
	configure.in (in AC_OUTPUT), as I'm not sure if that's portable.
	   
	
2005-04-28 (0.99 -released)
	Quadtree algorithm implemented for polygon rasterization:
	New traverser/polyqt.cc.
	Preliminary tests OK. The speedup over the flood-fill algorithm
	with a polygon that	contains 22860 pixels is:
	   time(flood-fill) / time(quadtree) = 98s/4s = 24.5 (!)
	TODO: More tests; check the other goemetry types resulting from 
	intersections that are ignored.
	
	starspan2.cc: shutdown calls to release resources: input data 
	objects and calls to CPLPopErrorHandler() and geos::Unload::Release().

	mksrcdist.sh: using my developer account to export from cvs