@@ -15,6 +15,8 @@ $Id$
 			
 	Updated: --csv now processing --RID
 	
+	Check --raster_directory is only given with --raster @field scheme.
+	
 2005-05-21 (0.994)
 	PATH in starspan{.in} was not set to include GDAL and GEOS's bin/
 	directories. Fixed.
